# cifuzz-meson-example

./: README.md  cifuzz.yaml  main.cpp  meson.build  my_fuzz_test.cpp
src/: explore_me.cpp  explore_me.h  meson.build
